Final Fixes: Tests, Cache, Bot
- Controller tests added
- Cache clearing logic added
- Telegram bot integrated
- Stats & management endpoints finalized